testData/diagnostics/const_scope_4.diag.txt
testData/diagnostics/const_scope_4.nut line = (8) column = (10) : error: Unknown variable [x]
  case 1:
    print(x);
          ^
    break;

